kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-demo
spec:
  selector:
    app: open-demo
  ports:
    - port: 8080
      targetPort: 8080
