kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-demo
  labels:
    name: open-demo
  annotation:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
        - appli-opensource.dev.insee.io
  rules:
    - host: appli-opensource.dev.insee.io
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: open-demo
                port:
                  number: 8080
